# marketfinder_ETL

./: .env.example  .gitignore  Dockerfile  PYTHON_MIGRATION.md  README.md  basic_validation.py  check-inefficiency.js  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  run_tests.py  tailwind.config.js  vercel.json
.github/workflows/: ci.yml
.windsurf/rules/: etl_rules.md  npm-run-dev.md
api/etl-pipeline/: fetchers.ts  index.ts  route.ts  transforms.ts
api/test-etl/: README.md  route.ts  test-final-pipeline.ts
api/test-fetchers-only/: route.ts
apps/etl-service/: package.json  tsconfig.json
convex/: arbitrage.ts  crons.ts  etl.ts  jobs.ts  marketUtils.ts  markets.ts  platforms.ts  sampleAlerts.ts  sampleData.ts  schema.ts  semanticAnalysis.ts  settings.ts  syncLogs.ts  users.ts
convex/_generated/: api.d.ts
dags/: __init__.py  market_arbitrage_etl.py  monitoring_and_maintenance.py
data/: active-markets-test.db  all-kalshi-markets.db  improved-kalshi-test.db  kalshi-markets-efficient.db  platform-mapping-analysis.db  unified-markets.db
docs/: API_CONTRACTS.md  BUILD_PLAN.md  DATA_MAPPING.md  DBEAVER_CONNECTION.md  DEPLOYMENT_STRATEGY.md  DEVELOPMENT_PLAN.md  ETL_PIPELINE.md  KALSHI_VOLUME_FIX.md  LLM_API_SETUP_GUIDE.md  LLM_ARBITRAGE_SYSTEM.md  POLYMARKET_PAGINATION_ANALYSIS.md  PROJECT_RESTRUCTURING_PLAN.md  README.md  VERCEL_DUCKDB_ARCHITECTURE.md  WEEK1_IMPLEMENTATION.md  multi-layer-comparison-architecture.md  polykalshiAPI.md  solution-to-cartesian-product.md  specs.md
scripts/: ORGANIZATION.md  README.md  debug-database-query.ts  debug-kalshi-fetch.ts  duckdb-server.ts  find-polymarket-endpoint.ts  investigate-polymarket-total.ts  llm-arbitrage-matching.ts  populate-exhaustive-database.ts  populate-full-database.ts  test-duckdb-row-access.ts  test-kalshi-field-mapping.ts  test-kalshi-integration.js  test-kalshi-volume-fix.ts  test-pagination-with-duckdb.ts
scripts/debug/: analyze-kalshi-volume-issue.ts  debug-database-query.ts  debug-kalshi-fetch.ts  investigate-kalshi-api-limitations.ts  investigate-kalshi-authentication.ts  investigate-kalshi-volume.ts  investigate-polymarket-total.ts
scripts/dev/: analyze-kalshi-polymarket-mapping.ts  demo-llm-matching.ts  duckdb-server.ts  improve-arbitrage-matching.ts  setup-local-duckdb.ts
scripts/production/: analyze-comprehensive-llm-results.ts  analyze-enhanced-llm-results.ts  analyze-multi-stage-results.ts  check-descriptions.ts  create-unified-etl-transform.ts  fetch-kalshi-markets-efficient.ts  fix-descriptions.ts  intelligent-chunking-strategy.ts  llm-arbitrage-matching.ts  multi-stage-llm-arbitrage.ts  setup-llm-matching.sh  (+2 more)
src/: App.tsx  SignInForm.tsx  SignOutButton.tsx  index.css
tests/: conftest.py  test_environment.py  test_ml_scoring.py
(+103 files in other folders)
